# PackageKit

./: Makefile.am  configure.ac  default.nix  flake.nix
backends/nix/: Makefile.am  nix-lib-plus.cc  pk-backend-nix.cc
